# sudoku_solver

./: .gitignore  README.md  algorithm_x.py  algorithm_x_sudoku_solver.py  backtracking_solver.py  main.py  sudoku.py  test_sudokus.txt
python/: algorithm_x.py  algorithm_x_sudoku_solver.py  backtracking_solver.py  backtracking_sudoku_solver.py  check_sudoku.py  main.py  pyproject.toml
resources/: all.txt
rust/: Cargo.toml
rust/benches/: sudoku_bench.rs
rust/src/: algorithm_x.rs  algorithm_x_solver.rs  backtracking_solver.rs  boxed_by.rs  lib.rs  main.rs  space_by.rs  stats.rs  sudoku.rs  sudoku_solver.rs
rust/src/algorithm_x/: algorithm.rs  mod.rs  solver.rs
rust/src/backtracking/: solver.rs
