[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
ndarray = "0.17.1"

[profile.release]
debug = 1

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "sudoku_bench"
harness = false
