[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
ndarray = "0.17.1"
thiserror = "2.0.17"

[profile.release]
debug = 1

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "sudoku_bench"
harness = false
